syntax = "proto3";

package simple_merchant;

option go_package = "github.com/way11229/simple_merchant";

message CreateProductRequest {
    string name = 1;
    string description = 2;
    uint32 price = 3;
    int32 order_by = 4;
    bool is_recommendation = 5;
    uint32 total_quantity = 6;
    uint32 sold_quantity = 7;
}

message CreateProductResponse {
    uint32 product_id = 1;
}