syntax = "proto3";

package simple_merchant;

option go_package = "github.com/way11229/simple_merchant";

message DeleteProductByIdRequest {
    string product_id = 1;
}
